# rate-distortion

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: blahut_arimoto.rs  bounds.rs  distortion.rs  lib.rs  lloyd_max.rs  quantizer.rs
